[package]
name = "solana-liquidity-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
base64 = "0.22"
solana-sdk = "1.17.15"
solana-client = "1.17.15"
